--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "node-sass": "^7.0.0",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
     "vue": "^3.2.22",
     "vue-router": "4",
     "vuex": "^4.0.2"
